turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:4: error: not found: value Colors
		while(getCouleurSol()!=Colors(i)){
                                       ^